initial commit [location aware app]

--- a/Location Aware App Demo/Info.plist
+++ b/Location Aware App Demo/Info.plist
@@ -53,6 +53,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>You must give permission in order to use the application</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>You must give permission in order to use the application</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
